<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vl"
            android:textAlignment="textEnd"
            android:textColor="@color/colorAccent"
            android:gravity="end" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/able"
            android:textAlignment="textStart"
            android:gravity="start"
            android:textColor="@color/white"/>
    </LinearLayout>
   <ImageView
       android:contentDescription="@string/valuelabs_logo"
       android:id="@+id/logo"
       android:layout_width="wrap_content"
       android:layout_height="300dp"
       android:src="@drawable/vllogo"
       app:layout_constraintTop_toTopOf="parent"

       />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_myinfo"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/logo"/>
        <EditText
            android:id="@+id/etname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_good_name_please"
         style="@style/MAtextsyle"
            android:inputType="text"
            android:autofillHints=""
           />
        <EditText
            android:id="@+id/etage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_age"
            android:inputType="number"
            android:autofillHints=""
           style="@style/MAtextsyle"/>
        <EditText
            android:id="@+id/etheight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_height"
            android:inputType="numberDecimal"
            android:autofillHints=""
           style="@style/MAtextsyle"/>
        <EditText
            android:id="@+id/etweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_weight"
           style="@style/MAtextsyle"
            android:inputType="numberDecimal"
            android:autofillHints=""
           />
        <EditText
            android:id="@+id/etphno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
          style="@style/MAtextsyle"
            android:inputType="number"
            android:autofillHints=""
            />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_details"
            android:padding="@dimen/dp10"
            android:background="#b3ff66"
            android:textColor="@color/black"
            android:layout_margin="@dimen/dp10"
            android:id="@+id/checker"

            />
        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:background="@color/colorAccent"
            android:text="@string/done"
            android:padding="@dimen/dp10"
            android:layout_marginTop="@dimen/dp5"
            />
    </LinearLayout>
    </ScrollView>




