<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Secondactivity"
    android:background="@drawable/gradient1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:text="@string/your_info"
        android:padding="@dimen/dp10"
        android:layout_margin="@dimen/dp10"
        android:layout_gravity="center"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saname"
        android:padding="@dimen/dp10"
        android:layout_margin="@dimen/dp10"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sage"
        android:padding="@dimen/dp10"
        android:layout_margin="@dimen/dp10"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sheight"
        android:padding="@dimen/dp10"
        android:layout_margin="@dimen/dp10"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saweight"
        android:padding="@dimen/dp10"
        android:layout_margin="@dimen/dp10"
        android:textColor="@color/black"
       android:layout_gravity="center"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saphno"
        android:padding="@dimen/dp10"
        android:layout_margin="@dimen/dp10"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bmitext"
        android:padding="@dimen/dp10"
        android:layout_margin="@dimen/dp10"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textAlignment="center"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_the_secret"
        android:padding="@dimen/dp10"
        android:layout_margin="@dimen/dp10"
        android:id="@+id/calculatebmi"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:background="@drawable/gradient2"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_and_logout"
        android:padding="@dimen/dp10"
        android:layout_margin="@dimen/dp10"
        android:id="@+id/logout"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:background="@drawable/gradient2"
        />


  </LinearLayout>